# rust-miner

./: .gitattributes  .gitignore  BENCHMARK_DISCOVERY.md  CHANGELOG.md  CODE_CLEANUP_SUMMARY.md  CUDA_ONLY_ARCHITECTURE.md  CURRENT_STATUS.md  Cargo.toml  EXAMPLE_KAWPOW_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LOGGING_STRATEGY.md  MODULAR_ALGORITHMS.md  MODULAR_ALGORITHMS_SUMMARY.md  OPTIMIZATION_JOB_SWITCHING.md  OPTIMIZATION_STRATEGY.md  PERFORMANCE_ANALYSIS.md  PHASE_1_RESULTS.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  QUICK_REF.md  README.md  SESSION_FINAL_STATUS.sh  SETUP-WINDOWS.md  SETUP.md  STATUS.md  TEST_POOL.md  WILDRIG_COMPARISON.md  benchmark.sh  benchmark_occupancy.sh  run_kernel_test.sh  setup.sh  test-pool.sh  test_optimizations.sh  test_pool_optimization.sh  test_pool_realistic.sh
.github/: copilot-instructions.md
archive/: DIAGNOSTICO_HASHRATE.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_STRATEGY.md  POOL_TEST_INSTRUCTIONS.md  PROFILING_ANALYSIS.md  QHASH_BOTTLENECK_ANALYSIS.md  RESEARCH_PTX_SHA256.md  SESSION_SUMMARY.md  SOLUCAO_FINAL.md  TECHNICAL_CHANGES.md
examples/: bench_qhash.rs  check_target.rs  probability.rs  test_sha256.rs
src/: backend.rs  cli.rs  lib.rs  main.rs  mining.rs
src/algorithms/: ethash.rs  mod.rs  qhash.rs
src/cuda/: ethash.cu  ethash_backend.rs  ethash_dag_gen.rs  ethash_miner.rs  mod.rs  qhash.cu  qhash_backend.rs  qhash_old.cu
src/ethash/: dag.rs
src/gpu/: cuda.rs  mod.rs  opencl.rs
src/stratum/: client.rs  mod.rs  protocol.rs
tests/: modular_algorithms.rs  test_target.rs  test_target_debug.rs
