[package]
name = "rust-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Terminal colors
colored = "2.1"

# GPU detection - CUDA (optional)
cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }

# GPU detection - OpenCL (optional)
opencl3 = { version = "0.9", optional = true }

[features]
default = ["cuda"]
cuda = ["dep:cuda-runtime-sys"]
opencl = ["dep:opencl3"]
all-backends = ["cuda", "opencl"]
