[package]
name = "rust-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Terminal colors
colored = "2.1"

# GPU mining - CUDA (required)
cudarc = { version = "0.11", features = ["driver", "nvrtc", "cuda-12000"] }

[dev-dependencies]
hex = "0.4"

[features]
default = []
cuda = []  # Legacy feature flag for compatibility, CUDA is always enabled
